# chacrab

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  RELEASE_CHECKLIST.md  SECURITY_AUDIT.md  TODO.md  chacrab.db  docker-compose.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  SECURITY.md  SECURITY_AUDIT.md  TESTING.md  TODO.md
migrations/: 20240213000001_init.sql
migrations/postgres/: 20240213000001_init.sql
migrations/sqlite/: 20240214000001_add_verification.sql
scripts/: validate_postgres.sh
src/: lib.rs  main.rs
src/auth/: keyring.rs  login.rs  mod.rs
src/cli/: commands.rs  display.rs  mod.rs  parser.rs  prompts.rs  runtime_config.rs  session.rs  table.rs
src/commands/: add.rs  change_password.rs  delete.rs  export.rs  get.rs  import.rs  init.rs  list.rs  login.rs  logout.rs  mod.rs  update.rs
src/core/: backup.rs  crypto.rs  errors.rs  mod.rs  models.rs  password_policy.rs  vault.rs
src/crypto/: derive.rs  encrypt.rs  mod.rs
src/models/: credential.rs  mod.rs  user_config.rs
src/storage/: app.rs  db.rs  keyring.rs  mod.rs  mongo.rs  postgres.rs  queries.rs  sqlite.rs  trait.rs
src/sync/: mod.rs  sync_engine.rs
src/ui/: mod.rs  password_validator.rs
tests/: backend_selection.rs  integration_tests.rs  security_sqlite_plaintext.rs  sqlite_nonce_validation.rs  vault_service.rs
