[package]
name = "chacrab"
version = "0.3.0"
edition = "2021"

authors = ["imadenugraha@gmail.com"]

[dependencies]
# CLI Framework
clap = { version = "4.5", features = ["derive", "env"] }
dialoguer = "0.11"

# Cryptography
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "postgres", "macros", "migrate", "chrono"] }
tokio = { version = "1.35", features = ["full"] }

# Session Management
keyring = "2.3"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }

# Utilities
chrono = "0.4"
cli-clipboard = "0.4"

[dev-dependencies]
# Testing
tempfile = "3"
assert_cmd = "2"
predicates = "3"
tokio-test = "0.4"
