[package]
name = "chacrab"
version = "1.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "chacrab"
path = "src/bin/main.rs"

[dependencies]
argon2 = "0.5"
async-trait = "0.1"
base64 = "0.22"
chacha20poly1305 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
console = "0.15"
dialoguer = "0.11"
indicatif = "0.17"
keyring = "2.3"
mongodb = "3.1"
futures-util = "0.3"
hex = "0.4"
rand = "0.9"
rpassword = "7.3"
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "postgres"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }
zeroize = "1"
arboard = "3.4"
